--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
@@ -48,6 +49,7 @@
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
+          
             }
           },
           "defaultConfiguration": "production"
@@ -79,7 +81,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
