--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/material": "^20.2.1",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@formspree/core": "^4.0.0",
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
