--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,23 @@
         {
-          "version": 2,
-          "builds": [
-            {
-              "src": "package.json",
-              "use": "@vercel/static-build",
-              "config": {
-                "distDir": "dist/Gadget3.0/browser"
-              }
-            }
-          ],
-          "routes": [
-            {
-              "src": "/(.*)",
-              "dest": "/index.html"
-            }
-          ]
+            "version": 2,
+            "builds": [
+                {
+                    "src": "package.json",
+                    "use": "@vercel/static-build",
+                    "config": {
+                        "distDir": "dist/TomiDev/browser"
+                    }
+                }
+            ],
+            "routes": [
+                {
+                    "src": "/(.*)",
+                    "dest": "/index.html"
+                }
+            ],
+            "engines": {
+                "node": "18.x"
+            },
+            "installCommand": "npm install --legacy-peer-deps",
+            "buildCommand": "npm run build"
         }
