--- a/vercel.json
+++ b/vercel.json
@@ -17,5 +17,5 @@
             ],
             
             "installCommand": "npm install --legacy-peer-deps",
-            "buildCommand": "npm run build"
+            "buildCommand": "npm install --legacy-peer-deps && npm run build"
         }
