--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/TomiDev",
+            "outputPath": "dist/TomiDev/browser",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
